force-app/main/default/objects/KimbleOne__RiskTemplate__c/KimbleOne__RiskTemplate__c.object-meta.xml
<CustomObject>
    <label>Risk Template</label>
    <nameField>
        <label>Risk Template Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>