force-app/main/default/objects/KimbleOne__RiskTemplate__c/fields/KimbleOne__IsInternal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsInternal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsInternal</label>
    <type>Checkbox</type>
</CustomField>