force-app/main/default/objects/KimbleOne__RiskTemplate__c/fields/KimbleOne__ProductDomain__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductDomain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Domain</label>
    <referenceTo>KimbleOne__ProductDomain__c</referenceTo>
    <relationshipLabel>Risk Templates</relationshipLabel>
    <relationshipName>RiskTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>