force-app/main/default/objects/KimbleOne__RiskTemplate__c/fields/KimbleOne__RiskImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskImpact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Impact</label>
    <referenceTo>KimbleOne__RiskImpact__c</referenceTo>
    <relationshipLabel>Risk Templates</relationshipLabel>
    <relationshipName>RiskTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>