force-app/main/default/objects/KimbleOne__RiskTemplate__c/listViews/KimbleOne__All_Risk_Templates.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All_Risk_Templates</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>KimbleOne__ProductDomain__c</columns>
    <columns>KimbleOne__RiskCategory__c</columns>
    <columns>KimbleOne__RiskImpact__c</columns>
    <columns>KimbleOne__RiskProbability__c</columns>
    <columns>KimbleOne__Account__c</columns>
    <columns>KimbleOne__IsInternal__c</columns>
    <columns>KimbleOne__Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Risk Templates</label>
    <language>en_US</language>
</ListView>